index.css
/* ... */
  
  .special-section-padding {
    width: 100%;
    display: flex;
    padding: var(--dl-space-space-fiveunits);
    position: relative;
    align-items: center;
    flex-direction: column;
  }
  
  .special-section-max-width {
    width: 100%;
    max-width: var(--dl-size-size-maxwidth);
  }
  
  .special-img-ratio-1-1 {
    width: 100%;
    object-fit: cover;
    aspect-ratio: 1/1;
    border-radius: var(--dl-radius-radius-imageradius);
  }
  
  .special-img-ratio-16-9 {
    width: 100%;
    object-fit: cover;
    aspect-ratio: 16/9;
    border-radius: var(--dl-radius-radius-imageradius);
  }
  
  .special-img-ratio-4-3 {
    width: 100%;
    object-fit: cover;
    aspect-ratio: 4/3;
    border-radius: var(--dl-radius-radius-imageradius);
  }
  
  .special-img-ratio-4-6 {
    width: 100%;
    object-fit: cover;
    aspect-ratio: 4/6;
    border-radius: var(--dl-radius-radius-imageradius);
  }
  
  .special-img-round {
    width: 100%;
    border-radius: var(--dl-radius-radius-round);
  }
  
  .special-flex-column {
    gap: var(--dl-space-space-twounits);
    display: flex;
    overflow: hidden;
    position: relative;
    align-items: center;
    flex-direction: column;
  }
  
  .special-flex-row {
    gap: var(--dl-space-space-twounits);
    display: flex;
    overflow: hidden;
    position: relative;
    align-items: center;
  }
  
  .special-grid-6 {
    display: grid;
    grid-gap: var(--dl-space-space-twounits);
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
  }
  
  .special-grid-5 {
    display: grid;
    grid-gap: var(--dl-space-space-twounits);
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  }
  
  .special-card {
    gap: var(--dl-space-space-oneandhalfunits);
    display: flex;
    padding: var(--dl-space-space-twounits);
    align-items: stretch;
    border-radius: var(--dl-radius-radius-cardradius);
    flex-direction: column;
  }
  
  .special-box-shadow {
    box-shadow: 0px 0px 5px -2px var(--dl-color-theme-neutral-dark);
  }
  
  .special-grid-3 {
    display: grid;
    grid-gap: var(--dl-space-space-twounits);
    grid-template-columns: 1fr 1fr 1fr;
  }
  
  .special-grid-4 {
    display: grid;
    grid-gap: var(--dl-space-space-twounits);
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }
  
  .special-grid-2 {
    width: 100%;
    display: grid;
    grid-gap: var(--dl-space-space-twounits);
    grid-template-columns: 1fr 1fr;
  }
  
  .special-checkbox {
    width: var(--dl-size-size-xsmall);
    height: var(--dl-size-size-xsmall);
  }
  
  .special-select {
    cursor: pointer;
    appearance: none;
    padding-top: var(--dl-space-space-halfunit);
    padding-left: var(--dl-space-space-unit);
    border-radius: var(--dl-radius-radius-inputradius);
    padding-right: var(--dl-space-space-twounits);
    padding-bottom: var(--dl-space-space-halfunit);
    background-color: var(--dl-color-theme-neutral-light);
    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg width%3D%2220%22 height%3D%2220%22 xmlns%3D%22http%3A//www.w3.org/2000/svg%22 viewBox%3D%220 0 20 20%22 fill%3D%22%23000%22%3E%3Cpath d%3D%22M4.293 7.293a1 1 0 011.414 0L10 11.586l4.293-4.293a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5-5a1 1 0 010-1.414z%22/%3E%3C/svg%3E');
    background-repeat: no-repeat;
    background-position: right 8px center;
  }
  
  .special-divider-horizontal {
    width: 100%;
    height: 1px;
    background-color: var(--dl-color-theme-neutral-dark);
  }
  
  .special-icon-small {
    width: 24px;
    height: 24px;
  }
  
  .special-button-icon {
    fill: var(--dl-color-theme-secondary1);
    padding: 3px;
    transition: 0.3s;
    border-radius: var(--dl-radius-radius-round);
  }
  
  .special-button-icon:hover {
    fill: var(--dl-color-theme-secondary2);
  }
  
  .special-icon-medium {
    width: var(--dl-size-size-small);
    height: var(--dl-size-size-small);
  }
  
  .special-icon-x-small {
    width: var(--dl-size-size-xsmall);
    height: var(--dl-size-size-xsmall);
  }
  
  .special-link {
    cursor: pointer;
    display: inline-block;
    overflow: hidden;
    background: linear-gradient(to right, var(--dl-color-theme-primary1) 50%, var(--dl-color-theme-neutral-dark) 50%);
    transition: background-position 300ms ease;
    font-weight: 600;
    background-clip: text;
    background-size: 200% 100%;
    background-position: 100%;
    -webkit-text-fill-color: transparent;
  }
  
  .special-link:hover {
    background-position: 0 100%;
  }
  
  .special-grid-auto-300 {
    display: grid;
    grid-gap: var(--dl-space-space-oneandhalfunits);
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  }
  
  .special-animated-group-vertical-reverse {
    gap: var(--dl-space-space-unit);
    width: 100%;
    display: flex;
    animation: scroll-y 20s linear infinite;
    align-items: flex-start;
    flex-direction: column;
    justify-content: space-around;
    animation-direction: reverse;
  }
  
  .special-animated-group-horizontal-reverse {
    gap: var(--dl-space-space-unit);
    display: flex;
    animation: scroll-x 20s linear infinite;
    min-width: 100%;
    align-items: center;
    flex-shrink: 0;
    justify-content: space-around;
    animation-direction: reverse;
  }
  
  .special-animated-group-vertical {
    gap: var(--dl-space-space-unit);
    width: 100%;
    display: flex;
    animation: scroll-y 20s linear infinite;
    align-items: flex-start;
    flex-direction: column;
    justify-content: space-around;
  }
  
  .special-animated-group-horizontal {
    gap: var(--dl-space-space-unit);
    display: flex;
    animation: scroll-x 20s linear infinite;
    min-width: 100%;
    align-items: center;
    flex-shrink: 0;
    justify-content: space-around;
  }
  
  .special-animated-group-container-vertical {
    gap: var(--dl-space-space-unit);
    display: flex;
    overflow: hidden;
    flex-direction: column;
  }
/* ... */

